--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "@binary-tree-syrup/sum-to",
   "version": "1.0.0",
   "description": "CLI app to list all the possible ways of summing to N. Helpful when solving killer sudokus",
-  "main": "sum-scores.js",
+  "main": "./cli.js",
+  "bin": {
+    "sum-to": "./cli.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
